--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ggorosave/Taco_Bout_It_Blog#readme",
   "dependencies": {
+    "@types/express-session": "^1.17.5",
     "@types/sequelize": "^4.28.14",
     "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.1.5",
